[package]
name = "bie-server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.7"
tokio = { version = "1.40.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.16"
serde = {version="1.0.210", features = ["derive"]}
uuid = {version = "1.10.0", features = ["v4"]}
config = "0.14.0"
anyhow = "1.0.89"
futures = {version = "0.3.30", default-features = false}
bie-common = { path = "../bie-common" }
env_logger = "0.11.5"
log = "0.4.22"
