[package]
name = "bie-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solo server dependencies
warp = "0.3.7"
tokio-stream = "0.1.16"
config = "0.14.0"
env_logger = "0.11.5"

# Workspace dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
futures = { workspace = true }

# Cross-project dependencies
bie-common = { path = "../bie-common" }
