[package]
name = "bie"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solo dependencies
clap = { version = "4.5.17", features = ["derive"] }
xdg = { version = "2.5.2", features = ["serde"] }
toml = "0.8.19"
tokio-tungstenite = "0.24.0"

# Workspace dependencies
anyhow = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
log = {workspace = true}

# Cross-project dependencies
bie-common = { path = "../bie-common" }
config = "0.14.0"


env_logger = "0.11.5"

