[package]
name = "bie"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mlops-ninja/bie"
description = "Drop a file from a remote without almost any access"

[dependencies]
# Solo dependencies
clap = { version = "4.5.17", features = ["derive"] }
xdg = { version = "2.5.2", features = ["serde"] }
toml = "0.8.19"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }

# Workspace dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
minicbor-serde = { workspace = true }
ring = { workspace = true }

config = "0.14.0"


env_logger = "0.11.5"
url = "2.5.2"
tempfile = "3.13.0"
